i have the title img set by JS acc. to current width

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </h1> -->
 
     <div class="top-box">
-      <img src="images/cube/cube-name.jpg" alt="" class="top-img" />
+      <img src="images/cube/title.jpg" alt="" class="top-img" />
     </div>
     <div class="middle-box">
       <div class="middle-text-div"></div>
