i broke it. now it works again. commit.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link
       rel="stylesheet"
-      media="screen and (max-width: 900px)"
+      media="screen and (max-width: 1080px)"
       href="med.css"
     />
     <link
@@ -22,17 +22,15 @@
     <title>fave.movs</title>
   </head>
   <body>
-    <!-- background images     <-- DELETE SECTION    -->
-    <!-- <img src="images/50s.jpg" alt="" class="bg-sm" />
-    <img src="images/feet-up-amc.jpg" alt="" class="bg-med" />
-    <img src="images/feet-up-amc.jpg" alt="" class="bg-lg" /> -->
-
     <!-- <h1 class="title">
       No, really. This is my favorite movie.
     </h1> -->
 
     <div class="top-box">
-      <img src="images/cube/title.jpg" alt="" class="top-img" />
+      <!-- <img src="images/wargames/title.png" alt="" class="top-img sm" />
+      <img src="images/cube/title.jpg" alt="" class="top-img med" />
+      <img src="images/darkcrystal/title.png" alt="" class="top-img lg" /> -->
+      <img src="" alt="" class="top-img" />
     </div>
     <div class="middle-box">
       <div class="middle-text-div"></div>
