now adding text and 3 more images via JS

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
     <link
       rel="stylesheet"
-      media="screen and (max-width: 600px)"
+      media="screen and (max-width: 400px)"
       href="sm.css"
     />
     <title>fave.movs</title>
@@ -31,6 +31,7 @@
       <img src="images/cube/title.jpg" alt="" class="top-img med" />
       <img src="images/darkcrystal/title.png" alt="" class="top-img lg" /> -->
       <img src="" alt="" class="top-img" />
+      <p class="helpful"></p>
     </div>
     <div class="middle-box">
       <div class="middle-text-div"></div>
