--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
     <div class="top-box">
       <!-- <img src="images/wargames/title.png" alt="" class="top-img sm" />
-      <img src="images/cube/title.jpg" alt="" class="top-img med" />
-      <img src="images/darkcrystal/title.png" alt="" class="top-img lg" /> -->
+      <img src="images/cube/title.jpg" alt="" class="top-img med" /> -->
+      <!-- <img src="images/darkcrystal/title.png" alt="" class="top-img lg" />  -->
       <img src="" alt="" class="top-img" />
       <p class="helpful"></p>
     </div>
