--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
     <link
       rel="stylesheet"
-      media="screen and (max-width: 400px)"
+      media="screen and (max-width: 600px)"
       href="sm.css"
     />
     <title>fave.movs</title>
@@ -30,7 +30,10 @@
       <!-- <img src="images/wargames/title.png" alt="" class="top-img sm" />
       <img src="images/cube/title.jpg" alt="" class="top-img med" /> -->
       <!-- <img src="images/darkcrystal/title.png" alt="" class="top-img lg" />  -->
-      <img src="" alt="" class="top-img" />
+      <div class="hoverable">
+        <img src="" alt="" class="top-img" />
+        <div class="popup"></div>
+      </div>
       <p class="helpful"></p>
     </div>
     <div class="middle-box">
